--- a/MoCIoT.html
+++ b/MoCIoT.html
@@ -24,9 +24,9 @@
         const beta = event.beta;
         const gamma = event.gamma;
         
-        $("alpha").html(alpha)
-        $("beta").html(beta)
-        $("gamma").html(gamma)
+        $(".alpha").html(alpha)
+        $(".beta").html(beta)
+        $(".gamma").html(gamma)
     };
     
     window.addEventListener('deviceorientation', handleOrientation);
