--- a/canvas.html
+++ b/canvas.html
@@ -21,6 +21,8 @@ Your browser does not support the HTML canvas tag.</canvas>
   <div><span>gamma: </span><span class="gamma-x"></span></div>
 </div>
 
+<script src="jquery-3.6.3.min.js"></script>
+
 <script>
 function sleep(ms) {
   return new Promise(resolve => setTimeout(resolve, ms));
